# PrismLauncher-CurseForge-Bypass

./: .gitignore  BUILD_MANJARO.md  CMakeLists.txt  Compile-Linux.sh  Compile-Windows.sh  README-Cracked-Improved.md  README.md  msys2-pacman.conf
launcher/: CMakeLists.txt  FileSystem.cpp  main.cpp
launcher/cracked/: CMakeLists.txt  CrackedAccountManager.cpp  CrackedAccountManager.h  CrackedAuthProvider.h  CrackedUtils.cpp  CrackedUtils.h  OfflineSkinManager.cpp  OfflineSkinManager.h
launcher/modplatform/flame/: FileResolvingTask.cpp  FlameInstanceCreationTask.cpp
launcher/resources/pirate_legacy/: pirate_legacy.qrc
launcher/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
launcher/ui/dialogs/: LocalServerDialog.cpp  LocalServerDialog.h  OfflineSkinDialog.cpp  OfflineSkinDialog.h
launcher/ui/pages/instance/: ModFolderPage.cpp  ModFolderPage.h
launcher/ui/pages/modplatform/flame/: FlamePage.cpp  FlamePage.h
launcher/ui/pages/modplatform/legacy_ftb/: Page.cpp  Page.h
launcher/ui/themes/: PirateLavaTheme.cpp  PirateLavaTheme.h  ThemeManager.cpp
